--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="go_to_orders">Go to orders</string>
     <string name="hello">Hello, Gerasimov Zahar!</string>
     <string name="my_orders">My Orders:</string>
+    <string name="addtocart">Add to cart</string>
 </resources>
